modification script import

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>The Vue View</title>
   
   <link rel="stylesheet" type="text/css" href="./assets/style.css">
-  <script src="./node_modules/vue/dist/vue.js"></script>
+  <script src="./node_modules/vue/dist/vue.min.js"></script>
    <script src="./assets/js/components/Tweet.js" defer></script>
 </head>
 <body>
