add responsive setup

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>The Vue View</title>
   
   <link rel="stylesheet" type="text/css" href="./assets/style.css">
-  <script src="./node_modules/vue/dist/vue.min.js" defer></script>
-   <script src="./assets/js/components/Tweet.js" defer></script>
+  <script src="./node_modules/vue/dist/vue.min.js"></script>
+  
 </head>
 <body>
   <div id="app">
