--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>The Vue View</title>
   
   <link rel="stylesheet" type="text/css" href="./assets/style.css">
-  <script src="./node_modules/vue/dist/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
   
 </head>
 <body>
