title and variable changement

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 </div>
-    <h1>THE VUE VIEW</h1>
+    <h1>Lorenzo Tweetos</h1>
     <div class="user">
       <div class="user-information">
         <div class="image-container">
@@ -33,8 +33,8 @@
      
     <div class="settings">
       <h2>Settings</h2>
-      <label for="username">{{ username}}</label>
-      <input type="text" value="username" placeholder="Username" />
+      <label for="username">Username</label>
+      <input v-model="username" type="text" value="username" placeholder="Username" />
       <label for="bio">Bio</label>
       <textarea value="bio" placeholder="Bio"></textarea>
       <label for="tweet">New Tweet</label>
